--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
     "gatsby": "^2.0.19",
+    "gatsby-paginate": "^1.0.16",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-feed": "^2.0.8",
