--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Song Min Suk",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "disqus-react": "^1.0.5",
     "emotion": "^9.2.12",
     "emotion-server": "^9.2.12",
     "gatsby": "^2.0.19",
     "gatsby-paginate": "^1.0.16",
+    "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-feed": "^2.0.8",
@@ -36,8 +38,12 @@
     "react-dom": "^16.6.3",
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^3.2.2",
+    "react-instantsearch": "^5.3.2",
     "react-typography": "^0.16.13",
     "reactstrap": "^6.5.0",
+    "sharp": "^0.21.0",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
@@ -46,10 +52,12 @@
     "typography-theme-wordpress-2016": "^0.15.10"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^1.2.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "react-image-resizer": "^1.3.0"
   },
   "scripts": {
     "dev": "gatsby develop",
