--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-transformer-remark-plaintext": "^1.0.2",
     "gatsby-transformer-sharp": "^2.1.3",
     "lodash": "^4.17.11",
     "lost": "^8.3.0",
@@ -48,6 +49,7 @@
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
     "typography-theme-fairy-gates": "^0.15.11",
+    "typography-theme-funston": "^0.15.10",
     "typography-theme-github": "^0.15.10",
     "typography-theme-wordpress-2016": "^0.15.10"
   },
